# cardano-config

./: .gitignore  CHANGELOG.md  CODEOWNERS  README.md  cabal.project  cardano-config.cabal  flake.nix  justfile
.github/workflows/: ci.yml
app/: Main.hs
cardano-config/defaults/: NetworkConfig.json
cue/: README.md
cue/cue.mod/: module.cue
cue/examples/: mainnet-relay-example.cue  preprod-blockproducer-example.cue  preview-relay-example.cue
cue/schema/: constraints.cue  gen_ConsensusConfig.cue  gen_LocalConnectionsConfig.cue  gen_MempoolConfig.cue  gen_NetworkConfig.cue  gen_ProtocolConfig.cue  gen_StorageConfig.cue  gen_TestingConfig.cue  gen_var_consensusPreprod.cue  gen_var_consensusPreview.cue  gen_var_networkBlockproducer.cue  gen_var_networkRelay.cue  gen_var_protocolMainnet.cue  gen_var_protocolPreprod.cue  gen_var_protocolPreview.cue  gen_var_storagePreprod.cue  gen_var_storagePreview.cue  gen_var_testingPreview.cue  presets.cue
defaults/: HermodTracing.json  LocalConnectionsConfig.json  MempoolConfig.json  NetworkConfig.json  ProtocolConfig.json  README.md  StorageConfig.json  TestingConfig.json
defaults/NetworkConfig/: relay.json
examples/: split-list.json
perSystem/: devShells.nix  packages.nix  project.nix
schemas/: AlonzoGenesis.schema.json  ConsensusConfig.schema.json  ConwayGenesis.schema.json  DijkstraGenesis.schema.json  LocalConnectionsConfig.schema.json  MempoolConfig.schema.json  NetworkConfig.schema.json  ProtocolConfig.schema.json  ShelleyGenesis.schema.json  StorageConfig.schema.json  TestingConfig.schema.json  config.legacy-one-file.schema.json  config.schema.json
scripts/: cabal-format.sh  cue-ci.sh  fourmolize.sh  gen-schemas.sh
src/Cardano/: Configuration.hs
src/Cardano/Configuration/: Basic.hs  CliArgs.hs  Common.hs  File.hs  Genesis.hs  Render.hs  Schema.hs
src/Cardano/Configuration/File/: Consensus.hs  Error.hs  Lint.hs  Mempool.hs  Merge.hs  Migrate.hs  Network.hs  Protocol.hs  Storage.hs  Testing.hs  Tracing.hs
src/Cardano/Configuration/Genesis/: Alonzo.hs  Byron.hs  Conway.hs  Dijkstra.hs  Ledger.hs  Shelley.hs
test/: Main.hs
test/examples/: consensus.json  fullconfig.json  legacy-renamed-fields.json  localconnections.json  lsm-mithril-export.json  lsm-mithril-no-export.json  mempool-mixed.json  mempool.json  migration-unparseable.json  min-node-version-legacy.json  min-node-version.json  network.json  protocol.json  role-precedence.json  shadow.json  storage.json  subfile-absolute.json  subfile-escapes.json  testing-dijkstra-nohash.json  testing-dijkstra.json  testing.json  tracing-file.json  tracing-inline.json  tracing-sub.json
variants/ConsensusConfig/: preview.json
variants/NetworkConfig/: blockproducer.json  relay.json
variants/ProtocolConfig/: mainnet.json  preprod.json  preview.json
variants/StorageConfig/: preprod.json  preview.json
variants/TestingConfig/: preview.json
